# TestingAgentFramework

./: .env.example  .gitignore  .snyk  APPLICATION_OVERVIEW.md  COMPREHENSIVE_APPLICATION_REVIEW.md  CONTEXT_FOR_NEXT_SESSION.md  CRITIC_REVIEW_INTEGRATION.md  DOCUMENT_IMAGE_SECURITY_DESIGN.md  DOCUMENT_UPLOAD_TEST_REPORT.md  FUNCTIONAL_IMPROVEMENTS_ROADMAP.md  MULTI_AGENT_ACTION_PLAN.md  PHASE1_SECURITY_IMPLEMENTATION.md  PHASE2_1_IMAGE_SECURITY.md  PHASE2_2_PII_DETECTION.md  README.md  SECURITY_IMPLEMENTATION_PLAN.md  SECURITY_QUICK_START.md  SECURITY_SCANNING.md  SECURITY_SCAN_RESULTS.md  TEST_TICKET_IMPROVEMENT.md  TICKET_IMPROVER_ENHANCEMENT_PLAN.md  UI_SETUP.md  fetch_epic.py  generate_test_cases.py  generate_test_tickets.py  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  start_ui.bat  start_ui.sh  test_cases_UEX_326.json  test_document_upload.py  test_imports.py  test_multi_agent_integration.py  test_sanitization.py  test_security_fixes.py  test_setup.py  test_strategic_agents.py  test_tickets_UEX_17.json  (+1 more)
.cache/llm/: llm_cache_v5_0755e4acc73f0529334b8173b7b6d9d299c082d34b54365f3ef4bd3e623fc9d5.cache  llm_cache_v5_17bb4c9db9e2183b08933c4ecc01815091ed967639f146e81f5158f55a466d62.cache  llm_cache_v5_487c456f1547d88efe844270dcea71bab91378512b76279243bf479a39a640c2.cache  llm_cache_v5_4fa186cc18a962d541118297d173695218e8bfddf63f8fd975f3f925add25346.cache  llm_cache_v5_50e3b6c55572a56c1afd1033417620515a961c6a10e096544a5c04ea2857c456.cache  llm_cache_v5_57b50602776e5862190c1c48645c94770a6f2e735356c694e2cdcd9d3efba9ad.cache  llm_cache_v5_6cebc5d06f99dcd295918cc498e8ad749821af1b716a6f331430c261f5230881.cache  llm_cache_v5_a8a0a7ade60f1c8b78bb9cc4088226cec49825d278af4455a1abd025c8746bec.cache  llm_cache_v5_b1274c7da8fd62cd6852d439742c6ea3115ee40937b727b3f1b99dcdeae15e4c.cache  llm_cache_v5_c2ed28cd709cd62c3bf0128af361a85246ff30e25006cf19d0abcc5dd51ba4ab.cache  llm_cache_v5_d101b3f44889ff3e5780973d0210c355d9b4c68073a9e663fea1178ef0b8941b.cache  llm_cache_v5_dba698b4d0c100799c6db50b593927e337a5c67cb8a5f9c8ca6c6d2da8b1cf37.cache  llm_cache_v5_ed78df0e2b110ea2764a91a7e3bb7eb4f53399f0d1a8d664ef10751c2c053364.cache
.github/workflows/: security-scan.yml
docs/: FIXES_SUMMARY.md  OPTIMIZATION_IDEAS.md  QUICK_START.md  UI_OVERVIEW.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
legacy/: AI_Tester_29-10-25_ATTACHMENTS_FULL_v2.py
scripts/: security-scan.bat  security-scan.sh
tests/: conftest.py
(+73 files in other folders)
